--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/addons/p5.sound.min.js"></script>
+
+    <script src="https://p5play.org/v3/planck.min.js"></script>
+    <script src="https://p5play.org/v3/p5play.js"></script>
     <title>Document</title>
 </head>
 <body>
     <h1>Welcome To My Beautiful Page!</h1>
     <ul>
-        <li>Project 1</li>
+        <a href="proj1.html"><li>Project 1</li></a>
         <li>Project 2</li>
         <li>Project 3</li>
         <li>Project 4</li>
@@ -20,6 +25,11 @@
 </html>
 
 <style>
+    html, body {
+        margin: 0;
+        padding: 0;
+    }
+
     h1 {
         font-size: 4rem;
     }
