--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <h1>Welcome To My Beautiful Page!</h1>
     <ul>
         <a href="proj1.html"><li>Project 1</li></a>
-        <li>Project 2</li>
-        <li>Project 3</li>
+        <a href="proj2.html"><li>Project 2</li></a>
+        <a href="proj3.html"><li>Project 3</li></a>
         <li>Project 4</li>
         <li>Project 5</li>
     </ul>
