--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
         <a href="proj1.html"><li>Project 1</li></a>
         <a href="proj2.html"><li>Project 2</li></a>
         <a href="proj3.html"><li>Project 3</li></a>
-        <li>Project 4</li>
-        <li>Project 5</li>
+        <a href="proj4.html"><li>Project 4</li></a>
+        <a href="proj5.html"><li>Project 5</li></a>
+        <a href="proj6.html"><li>Project 6</li></a>
     </ul>
 </body>
 </html>
