added the gmae of life

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="proj4.html"><li>Project 4</li></a>
         <a href="proj5.html"><li>Project 5</li></a>
         <a href="proj6.html"><li>Project 6</li></a>
+        <a href="proj7.html"><li>Project 7</li></a>
     </ul>
 </body>
 </html>
