--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
     <ul>
         <a href="proj1.html"><li>Project 1</li></a>
         <a href="proj2.html"><li>Project 2</li></a>
+        <a href="proj9.html"><li>Mandelbrot</li></a>
+        <a href="proj10.html"><li>Dithering</li></a>
+        <a href="proj11.html"><li>Glitch</li></a>
+        <a href="proj12.html"><li>Image Blend</li></a>
         <a href="proj3.html"><li>Project 3</li></a>
         <a href="proj4.html"><li>Project 4</li></a>
         <a href="proj5.html"><li>Project 5</li></a>
         <a href="proj6.html"><li>Project 6</li></a>
         <a href="proj7.html"><li>Project 7</li></a>
+        <a href="proj8.html"><li>FLight Map</li></a>
     </ul>
 </body>
 </html>
