--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
 <body>
     <h1>Welcome To My Beautiful Page!</h1>
     <ul>
-        <a href="proj1.html"><li>Project 1</li></a>
-        <a href="proj2.html"><li>Project 2</li></a>
-        <a href="proj9.html"><li>Mandelbrot</li></a>
+        <a href="proj1.html"><li>Platformer</li></a>
+        <a href="proj2.html"><li>Bubbly</li></a>
+        <a href="proj13.html"><li>Image Filter</li></a>
+        <a href="proj14.html"><li>Image Sorter</li></a>
         <a href="proj10.html"><li>Dithering</li></a>
         <a href="proj11.html"><li>Glitch</li></a>
         <a href="proj12.html"><li>Image Blend</li></a>
-        <a href="proj3.html"><li>Project 3</li></a>
-        <a href="proj4.html"><li>Project 4</li></a>
-        <a href="proj5.html"><li>Project 5</li></a>
-        <a href="proj6.html"><li>Project 6</li></a>
-        <a href="proj7.html"><li>Project 7</li></a>
-        <a href="proj8.html"><li>FLight Map</li></a>
+        <a href="proj3.html"><li>Abstract Algo</li></a>
+        <a href="proj4.html"><li>Agent</li></a>
+        <a href="proj5.html"><li>L-System</li></a>
+        <a href="proj6.html"><li>Markov Chain</li></a>
+        <a href="proj7.html"><li>Game of Life</li></a>
+        <a href="proj8.html"><li>Flights Map</li></a>
+        <a href="proj9.html"><li>Mandelbrot</li></a>
     </ul>
 </body>
 </html>
