--- a/proj14.html
+++ b/proj14.html
@@ -4,33 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="p5.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/addons/p5.sound.min.js"></script>
-
-    <script src="https://p5play.org/v3/planck.min.js"></script>
-    <script src="https://p5play.org/v3/p5play.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome To My Beautiful Page!</h1>
-    <h3>This is a showcase page for my creative coding projects with p5js</h3>
-    <br>
+    <script>
+        
+    </script>
+
     <ul>
-        <a href="proj1.html"><li>Platformer</li></a>
-        <a href="proj2.html"><li>Bubbly</li></a>
-        <a href="proj13.html"><li>Image Filter</li></a>
-        <a href="proj14.html"><li>Image Sorter</li></a>
-        <a href="proj10.html"><li>Dithering</li></a>
-        <a href="proj11.html"><li>Glitch</li></a>
-        <a href="proj12.html"><li>Image Blend</li></a>
-        <a href="proj3.html"><li>Abstract Algo</li></a>
-        <a href="proj4.html"><li>Agent</li></a>
-        <a href="proj5.html"><li>L-System</li></a>
-        <a href="proj6.html"><li>Markov Chain</li></a>
-        <a href="proj7.html"><li>Game of Life</li></a>
-        <a href="proj8.html"><li>Flights Map</li></a>
-        <a href="proj9.html"><li>Mandelbrot</li></a>
+        <a href="proj14-1.html">
+            <li>Vertical</li>
+        </a>
+        <a href="proj14-2.html">
+            <li>Horizontal</li>
+        </a>
     </ul>
 </body>
 </html>
